fs/Kconfig: Add help text about CONFIG_FHANDLE
So I spent an hour debugging a non-booting kernel, to discover that Fedora Linux
will not boot if CONFIG_FHANDLE is disabled. It will hang indefinitely in:

  [     *] A start job is running for dev-sda1.device (20h 21min / no limit)

Add this tidbit to the Kconfig help text, as the existing text only talks about
file servers.

Cc: Alexander Viro <viro@zeniv.linux.org.uk>
Cc: Linus Torvalds <torvalds@linux-foundation.org>
Cc: Peter Zijlstra <peterz@infradead.org>
Cc: Thomas Gleixner <tglx@linutronix.de>
Cc: linux-fsdevel@vger.kernel.org
Cc: linux-kernel@vger.kernel.org
Signed-off-by: Ingo Molnar <mingo@kernel.org>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -283,6 +283,9 @@ config FHANDLE
 	  get renamed. Enables open_by_handle_at(2) and name_to_handle_at(2)
 	  syscalls.
 
+	  Some distributions (such as Fedora) will not boot without this
+	  system call, so if unsure, say Y.
+
 config USELIB
 	bool "uselib syscall"
 	default y
