--- a/ti_config_fragments/android.cfg
+++ b/ti_config_fragments/android.cfg
@@ -9,3 +9,6 @@
 CONFIG_CMDLINE="androidboot.selinux=permissive printk.devkmsg=on cma=256m vmalloc=400m"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_EXTEND=y
+
+# Software Sync Interface
+CONFIG_SW_SYNC=y
