--- a/ti_config_fragments/android.cfg
+++ b/ti_config_fragments/android.cfg
@@ -10,6 +10,10 @@ CONFIG_CMDLINE="androidboot.selinux=permissive printk.devkmsg=on cma=256m vmallo
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_EXTEND=y
 
+# Enable firmware fallback mechanism
+CONFIG_FW_LOADER_USER_HELPER=y
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+
 # Software Sync Interface
 CONFIG_SW_SYNC=y
 
