--- a/ti_config_fragments/v8_android.cfg
+++ b/ti_config_fragments/v8_android.cfg
@@ -15,5 +15,9 @@ CONFIG_ARM_ATAG_DTB_COMPAT_CMDLINE_EXTEND=y
 CONFIG_ARM64_64K_PAGES=n
 CONFIG_ARM64_4K_PAGES=y
 
+# Enable firmware fallback mechanism
+CONFIG_FW_LOADER_USER_HELPER=y
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+
 # Misc
 CONFIG_DEVTMPFS=n
