--- a/kernel/configs/android-base.config
+++ b/kernel/configs/android-base.config
@@ -12,7 +12,7 @@
 # CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_USELIB is not set
-# CONFIG_DEBUG_FS is not set
+# CONFIG_VHOST is not set
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_AIO=y
 CONFIG_ANDROID=y
@@ -28,6 +28,7 @@ CONFIG_BLOCK=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_SYSCALL=y
+CONFIG_CFI_CLANG=y
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_CPUACCT=y
@@ -44,6 +45,7 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
+CONFIG_DEBUG_LIST=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_VERITY=y
@@ -53,6 +55,8 @@ CONFIG_EPOLL=y
 CONFIG_EVENTFD=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FS_ENCRYPTION=y
+CONFIG_FS_VERITY=y
+CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
 CONFIG_FUSE_FS=y
 CONFIG_FUTEX=y
 CONFIG_HARDENED_USERCOPY=y
@@ -104,6 +108,7 @@ CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_L2TP=y
+CONFIG_LTO_CLANG=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MD=y
 CONFIG_MEMBARRIER=y
@@ -220,6 +225,7 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_TASK_XACCT=y
 CONFIG_TIMERFD=y
+CONFIG_TRACE_GPU_MEM=y
 CONFIG_TTY=y
 CONFIG_TUN=y
 CONFIG_UHID=y
