TI: ANDROID: Clean up BUILD.bazel file using buildifier
This has been generated with buildifier[1] via:

$ buildifier BUILD.bazel

Note that this is standard practice and used by pre-submit tests when
contributing to the Android Common Kernel.

[1] https://github.com/bazelbuild/buildtools
Signed-off-by: Mattijs Korpershoek <mkorpershoek@baylibre.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -691,6 +691,36 @@ copy_to_dist_dir(
 
 kernel_build(
     name = "ti",
+    outs = [
+        "Image",
+        "System.map",
+        "k3-am62-lp-sk.dtb",
+        "k3-am62-lp-sk-microtips-mf101hie-panel.dtbo",
+        "k3-am625-beagleplay.dtb",
+        "k3-am625-beagleplay-csi2-ov5640.dtbo",
+        "k3-am625-beagleplay-csi2-tevi-ov5640.dtbo",
+        "k3-am625-beagleplay-lincolntech-lcd185-panel.dtbo",
+        "k3-am625-sk.dtb",
+        "k3-am625-sk-m2-cc3301.dtbo",
+        "k3-am625-sk-microtips-mf101hie-panel.dtbo",
+        "k3-am62p5-sk.dtb",
+        "k3-am62p5-sk-m2-cc3301.dtbo",
+        "k3-am62p5-sk-mcan.dtbo",
+        "k3-am62p5-sk-microtips-mf101hie-panel.dtbo",
+        "k3-am62x-sk-csi2-ov5640.dtbo",
+        "k3-am62x-sk-csi2-tevi-ov5640.dtbo",
+        "k3-am62x-sk-hdmi-audio.dtbo",
+        "k3-am62x-sk-lpm-wkup-sources.dtbo",
+        "modules.builtin",
+        "modules.builtin.modinfo",
+        "vmlinux",
+        "vmlinux.symvers",
+    ],
+    additional_kmi_symbol_lists = [":aarch64_additional_kmi_symbol_lists"],
+    build_config = "build.config.gki.ti",
+    collect_unstripped_modules = True,
+    kmi_symbol_list = "//common:android/abi_gki_aarch64_ti",
+    kmi_symbol_list_strict_mode = True,
     make_goals = [
         "Image",
         "modules",
@@ -712,37 +742,6 @@ kernel_build(
         "ti/k3-am62p5-sk-mcan.dtbo",
         "ti/k3-am62p5-sk-microtips-mf101hie-panel.dtbo",
     ],
-    outs = [
-        "Image",
-        "System.map",
-        "modules.builtin",
-        "modules.builtin.modinfo",
-        "k3-am625-sk.dtb",
-        "k3-am625-beagleplay.dtb",
-        "k3-am62-lp-sk.dtb",
-        "k3-am62p5-sk.dtb",
-        "k3-am62x-sk-csi2-ov5640.dtbo",
-        "k3-am62x-sk-csi2-tevi-ov5640.dtbo",
-        "k3-am62x-sk-hdmi-audio.dtbo",
-        "k3-am62x-sk-lpm-wkup-sources.dtbo",
-        "k3-am625-sk-microtips-mf101hie-panel.dtbo",
-        "k3-am62-lp-sk-microtips-mf101hie-panel.dtbo",
-        "k3-am625-beagleplay-csi2-ov5640.dtbo",
-        "k3-am625-beagleplay-csi2-tevi-ov5640.dtbo",
-        "k3-am625-beagleplay-lincolntech-lcd185-panel.dtbo",
-        "k3-am62p5-sk-mcan.dtbo",
-        "k3-am62p5-sk-microtips-mf101hie-panel.dtbo",
-        "k3-am625-sk-m2-cc3301.dtbo",
-        "k3-am62p5-sk-m2-cc3301.dtbo",
-        "vmlinux",
-        "vmlinux.symvers",
-    ],
-    build_config = "build.config.gki.ti",
-    additional_kmi_symbol_lists=[":aarch64_additional_kmi_symbol_lists"],
-    collect_unstripped_modules = True,
-    kmi_symbol_list = "//common:android/abi_gki_aarch64_ti",
-    kmi_symbol_list_strict_mode = True,
-    strip_modules = True,
     module_outs = get_gki_modules_list("arm64") + [
         # keep sorted
         "crypto/af_alg.ko",
@@ -761,8 +760,8 @@ kernel_build(
         "drivers/dma-buf/heaps/cma_heap.ko",
         "drivers/dma-buf/heaps/system_heap.ko",
         "drivers/dma/ti/k3-psil-lib.ko",
-        "drivers/dma/ti/k3-udma-glue.ko",
         "drivers/dma/ti/k3-udma.ko",
+        "drivers/dma/ti/k3-udma-glue.ko",
         "drivers/firmware/ti_sci.ko",
         "drivers/gpio/gpio-davinci.ko",
         "drivers/gpio/gpio-pca953x.ko",
@@ -818,13 +817,13 @@ kernel_build(
         "drivers/net/mdio/mdio-bitbang.ko",
         "drivers/net/mdio/mdio-gpio.ko",
         "drivers/net/phy/dp83td510.ko",
-        "drivers/net/wireless/ti/cc33xx/cc33xx_sdio.ko",
         "drivers/net/wireless/ti/cc33xx/cc33xx.ko",
+        "drivers/net/wireless/ti/cc33xx/cc33xx_sdio.ko",
         "drivers/net/wireless/ti/wl18xx/wl18xx.ko",
         "drivers/net/wireless/ti/wlcore/wlcore.ko",
         "drivers/net/wireless/ti/wlcore/wlcore_sdio.ko",
-        "drivers/phy/cadence/cdns-dphy-rx.ko",
         "drivers/phy/cadence/cdns-dphy.ko",
+        "drivers/phy/cadence/cdns-dphy-rx.ko",
         "drivers/phy/cadence/phy-cadence-sierra.ko",
         "drivers/phy/cadence/phy-cadence-torrent.ko",
         "drivers/phy/phy-can-transceiver.ko",
@@ -874,18 +873,19 @@ kernel_build(
         "net/sched/sch_taprio.ko",
         "net/wireless/cfg80211.ko",
         "sound/soc/codecs/snd-soc-hdmi-codec.ko",
-        "sound/soc/codecs/snd-soc-pcm3168a-i2c.ko",
         "sound/soc/codecs/snd-soc-pcm3168a.ko",
-        "sound/soc/codecs/snd-soc-tlv320aic3x-i2c.ko",
+        "sound/soc/codecs/snd-soc-pcm3168a-i2c.ko",
         "sound/soc/codecs/snd-soc-tlv320aic3x.ko",
+        "sound/soc/codecs/snd-soc-tlv320aic3x-i2c.ko",
         "sound/soc/generic/snd-soc-audio-graph-card.ko",
-        "sound/soc/generic/snd-soc-simple-card-utils.ko",
         "sound/soc/generic/snd-soc-simple-card.ko",
+        "sound/soc/generic/snd-soc-simple-card-utils.ko",
         "sound/soc/ti/snd-soc-davinci-mcasp.ko",
         "sound/soc/ti/snd-soc-ti-edma.ko",
         "sound/soc/ti/snd-soc-ti-sdma.ko",
         "sound/soc/ti/snd-soc-ti-udma.ko",
     ],
+    strip_modules = True,
 )
 
 kernel_modules_install(
@@ -897,8 +897,6 @@ kernel_images(
     name = "ti_images",
     build_dtbo = True,
     build_initramfs = True,
-    kernel_build = "//common:ti",
-    kernel_modules_install = "//common:ti_modules_install",
     dtbo_srcs = [
         ":ti/k3-am62x-sk-hdmi-audio.dtbo",
         ":ti/k3-am62x-sk-csi2-ov5640.dtbo",
@@ -913,7 +911,9 @@ kernel_images(
         ":ti/k3-am62p5-sk-microtips-mf101hie-panel.dtbo",
         ":ti/k3-am625-sk-m2-cc3301.dtbo",
         ":ti/k3-am62p5-sk-m2-cc3301.dtbo",
-    ]
+    ],
+    kernel_build = "//common:ti",
+    kernel_modules_install = "//common:ti_modules_install",
 )
 
 #
@@ -940,10 +940,10 @@ copy_to_dist_dir(
     name = "ti_dist",
     data = [
         ":ti",
-        "//imgtech-module:ti_ext_modules",
-        ":ti_images",
         ":ti_compressed_image",
+        ":ti_images",
         ":ti_modules_install",
+        "//imgtech-module:ti_ext_modules",
     ],
     dist_dir = "out/ti/dist",
     flat = True,
@@ -955,8 +955,8 @@ kernel_abi(
     kernel_modules = [
         "//imgtech-module:ti_ext_modules",
     ],
-    kmi_symbol_list_add_only = True,
     kmi_enforced = False,
+    kmi_symbol_list_add_only = True,
 )
 
 # allmodconfig build tests.
