--- a/Documentation/devicetree/bindings/net/ti,icss-iep.yaml
+++ b/Documentation/devicetree/bindings/net/ti,icss-iep.yaml
@@ -12,6 +12,7 @@ maintainers:
 properties:
   compatible:
     enum:
+      - ti,am5728-icss-iep
       - ti,am654-icss-iep   # for K3 AM65x, J721E and AM64x SoCs
 
   reg:
