net: ethernet: ti: Configurations for TI Networking
Adds Kconfig and defconfig configurations.

Signed-off-by: Sinthu Raja <sinthu.raja@ti.com>
Signed-off-by: Roger Quadros <rogerq@ti.com>
Signed-off-by: Abdelaziz Belhareth <abdelaziz.belhareth@elco-solutions.de>
Signed-off-by: Anurag Dutta <a-dutta@ti.com>

--- a/arch/arm/configs/multi_v7_defconfig
+++ b/arch/arm/configs/multi_v7_defconfig
@@ -305,6 +305,7 @@ CONFIG_ICPLUS_PHY=y
 CONFIG_MARVELL_PHY=y
 CONFIG_AT803X_PHY=y
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_DP83848_PHY=y
 CONFIG_DP83867_PHY=y
 CONFIG_CAN_AT91=m
 CONFIG_CAN_FLEXCAN=m
@@ -1159,6 +1160,8 @@ CONFIG_ARCH_TEGRA_114_SOC=y
 CONFIG_ARCH_TEGRA_124_SOC=y
 CONFIG_SOC_TI=y
 CONFIG_TI_PRUSS=m
+CONFIG_TI_PRUETH=m
+CONFIG_TI_ICSS_IEP=m
 CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_PM_TEST_SUSPEND=y
