arm: multi_v7_defconfig: Enable NL80211 testmode driver
Enable NL80211 testmode driver to be built in for
testing purposes only.

Signed-off-by: Judith Mendez <jm@ti.com>

--- a/arch/arm/configs/multi_v7_defconfig
+++ b/arch/arm/configs/multi_v7_defconfig
@@ -183,6 +183,7 @@ CONFIG_BT_MRVL=m
 CONFIG_BT_MRVL_SDIO=m
 CONFIG_BT_QCOMSMD=m
 CONFIG_CFG80211=m
+CONFIG_NL80211_TESTMODE=y
 CONFIG_MAC80211=m
 CONFIG_IWLWIFI=m
 CONFIG_RFKILL=y
